--- a/CyberAction/Base.lproj/Main.storyboard
+++ b/CyberAction/Base.lproj/Main.storyboard
@@ -177,7 +177,7 @@
                         <outlet property="placeholderButton" destination="uD4-7Z-Q1C" id="S5p-kD-MCy"/>
                         <outlet property="placeholderLabel" destination="Xmu-lp-VCX" id="cR0-VQ-o9v"/>
                         <outlet property="placesCollectionView" destination="J8S-42-u3C" id="VIe-GX-bj0"/>
-                        <segue destination="1Xm-nl-bmK" kind="show" id="dAh-OL-OQd"/>
+                        <segue destination="1Xm-nl-bmK" kind="show" identifier="toDatePicker" id="dAh-OL-OQd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mH3-EF-HBB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -234,20 +234,61 @@
         <!--Выбор даты-->
         <scene sceneID="mWT-Cd-rjY">
             <objects>
-                <viewController id="1Xm-nl-bmK" sceneMemberID="viewController">
+                <viewController id="1Xm-nl-bmK" customClass="DateViewController" customModule="CyberAction" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="N2d-ep-20Q">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Pzs-re-lZ9">
+                                <rect key="frame" x="0.0" y="125.5" width="414" height="687.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="BJA-wx-C2I">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="RlW-wb-u6a">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="zoL-5A-Z7J">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Адрес" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6vF-Uh-RaL">
+                                <rect key="frame" x="0.0" y="88" width="414" height="27.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="4t0-Bt-gUF"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Pzs-re-lZ9" firstAttribute="leading" secondItem="4t0-Bt-gUF" secondAttribute="leading" id="3Qg-RB-QDd"/>
+                            <constraint firstItem="6vF-Uh-RaL" firstAttribute="top" secondItem="4t0-Bt-gUF" secondAttribute="top" id="Ar8-8n-vZV"/>
+                            <constraint firstItem="4t0-Bt-gUF" firstAttribute="trailing" secondItem="Pzs-re-lZ9" secondAttribute="trailing" id="P1k-D2-gEl"/>
+                            <constraint firstItem="4t0-Bt-gUF" firstAttribute="trailing" secondItem="6vF-Uh-RaL" secondAttribute="trailing" id="PHB-Fe-gyM"/>
+                            <constraint firstItem="6vF-Uh-RaL" firstAttribute="leading" secondItem="4t0-Bt-gUF" secondAttribute="leading" id="arz-dZ-Qsn"/>
+                            <constraint firstItem="4t0-Bt-gUF" firstAttribute="bottom" secondItem="Pzs-re-lZ9" secondAttribute="bottom" id="dKG-mq-jOQ"/>
+                            <constraint firstItem="Pzs-re-lZ9" firstAttribute="top" secondItem="6vF-Uh-RaL" secondAttribute="bottom" constant="10" id="kyy-Al-ZX8"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Выбор даты" id="fMO-Kf-SfR">
                         <barButtonItem key="backBarButtonItem" title="Назад" id="Rcx-U1-qU2"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="addressLabel" destination="6vF-Uh-RaL" id="QPi-Fx-1oJ"/>
+                        <outlet property="datesCollectionView" destination="Pzs-re-lZ9" id="joF-Pc-pQS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dd6-Wx-L5V" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5433" y="642"/>
+            <point key="canvasLocation" x="5431.884057971015" y="641.51785714285711"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="V3o-D6-iwI">
